# neural-network

./: CMakeLists.txt  LICENSE  README.md  build.ps1  main.cpp
lib/: ANN_utils.h  network.h  neuron.h
src/: ANN_utils.cpp  network.cpp  neuron.cpp
